Add user registration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <nav>
+      <li><a href= '/users/new'>Register</a></li>
+      <li><a href= '/sessions/new'>Login</a></li>
+      <li><a href= '/'>Home</a></li>
+    </nav>
     <%= yield %>
   </body>
 </html>
