--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,25 @@
   </head>
 
   <body>
-    <nav>
-      <% if logged_in? %>
-        <li><%= link_to "Logout", session_path(current_user), method: :delete %></li>
-        <li><%= link_to "My Profile", user_path(current_user) %> </li>
-      <% else %>
-        <li><%= link_to 'Register', new_user_path %></li>
-        <li><%= link_to 'Login', new_session_path %></li>
-      <% end %>
-      <li><%= link_to 'Home', root_path %></li>
+    <nav class='navbar navbar-default navbar-fixed-top'>
+      <div class='container'>
+        <ul class='nav navbar-nav'>
+          <% if logged_in? %>
+            <li><%= link_to "Logout", session_path(current_user), method: :delete %></li>
+            <li><%= link_to "My Profile", user_path(current_user) %> </li>
+          <% else %>
+            <li><%= link_to 'Register', new_user_path %></li>
+            <li><%= link_to 'Login', new_session_path %></li>
+          <% end %>
+          <li><%= link_to 'Home', root_path %></li>
+        <form class="navbar-form navbar-left">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        </ul>
+    </div>
     </nav>
     <% flash.each do |flash, msg| %>
       <%= msg %>
