--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,8 +1,8 @@
-<div class='container text-center'>
+<div class='container-fluid text-center'>
   <div class='row col-sm-4 center-block'>
     <% @posts.each do |post| %>
     <div class="card photo-card">
-      <img class="card-img-top" src=<%= post.photo %> alt="Card image cap">
+      <img class="card-img-top img-responsive" src=<%= post.photo %> alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Taken by: <%= post.user.username %> at <%= post.location %></h4>
         <p class="card-text"><%= post.caption %></p>
