--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,10 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <%= javascript_include_tag 'application' %>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 
   </head>
 
@@ -21,7 +21,7 @@
             <li><%= link_to "My Profile", user_path(current_user) %> </li>
           <% else %>
             <li><%= link_to 'Register', new_user_path %></li>
-            <li><%= link_to 'Login', new_session_path %></li>
+            <li id="login-btn"><%= link_to 'Login', new_session_path %></li>
           <% end %>
           <li><%= link_to 'Home', root_path %></li>
         <form class="navbar-form navbar-left">
@@ -36,6 +36,17 @@
     <% flash.each do |flash, msg| %>
       <%= msg %>
     <% end %>
+    <div class="login-space"></div>
     <%= yield %>
+    <footer>
+      <nav class="navbar navbar-fixed-bottom navbar-default">
+        <% if logged_in? %>
+        <form action='/posts' method='post' id='photo-uploader'>
+          <input type='text' name='photo_url' />
+          <input type='button' value='Add a photo!'>
+        </form>
+        <% end %>
+      </nav>
+    </footer>
   </body>
 </html>
